2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/drivers/socksys.c: removed redundant debug flags
	* src/include/sys/strsock/config.h.in: removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/Makefile.am: updates for release
	* doc/man/strsock.refs: updates for release
	* doc/man/man3/sockets.3.man: updates for release
	* doc/man/man3/socklib.3.man: updates for release
	* doc/man/man3/xxx.3.man: updates for release
	* doc/man/man5/strsock.5.man: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* src/drivers/socksys.c: updates for release
	* src/modules/sockmod.c: updates for release

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct define values
	* doc/man/man3/accept.3.man: updated manpage
	* doc/man/man3/bind.3.man: updated manpage
	* doc/man/man3/connect.3.man: updated manpage
	* doc/man/man3/getpeername.3.man: updated manpage
	* doc/man/man3/getsockname.3.man: updated manpage
	* doc/man/man3/getsockopt.3.man: updated manpage
	* doc/man/man3/listen.3.man: updated manpage
	* doc/man/man3/recv.3.man: updated manpage
	* doc/man/man3/recvfrom.3.man: updated manpage
	* doc/man/man3/recvmsg.3.man: updated manpage
	* doc/man/man3/send.3.man: updated manpage
	* doc/man/man3/sendmsg.3.man: updated manpage
	* doc/man/man3/sendto.3.man: updated manpage
	* doc/man/man3/setsockopt.3.man: updated manpage
	* doc/man/man3/shutdown.3.man: updated manpage
	* doc/man/man3/socket.3.man: updated manpage
	* doc/man/man3/socketpair.3.man: updated manpage
	* doc/man/man3/socklib.3.man: updated manpage
	* doc/manual/news.texi: updated release notes